# TALCO

./: .gitignore  .gitmodules  LICENSE  README.md
dataset/: README.md  query.fa  ref.fa  sequences.fa
hardware/: README.md
hardware/TALCO-WFAA/: README.md
hardware/TALCO-WFAA/hdl/: BRAM.sv  PEArray.sv  TALCO-WFAA.sv  WFAReduce.sv  compute_conv.sv  extend.sv  fifo.sv  ifc.sv  reduce.sv  tb.sv  thresholdCalc.sv  traceback.sv  wrapper.sv
hardware/TALCO-WFAA/openroad/: Makefile
hardware/TALCO-XDrop/: README.md
hardware/TALCO-XDrop/hdl/: BRAM.sv  DPBram.sv  PE.sv  PE_Array.sv  TALCO_XDrop.sv  ascii2nt.sv  nt2param.sv  reduction_tree.sv  tb.sv  traceback.sv
hardware/scripts/: ASIC_analysis.sh  DRAM_analysis.sh  DRAM_power.sh  SRAM_analysis.sh  build.cfg  install_dependecies.sh  openram.sh  params.tcl  run.sh
software/: .gitignore  README.md
software/TALCO-WFAA/: CMakeLists.txt  README.md
software/TALCO-WFAA/alignment/: cigar.h
software/TALCO-WFAA/system/: mm_allocator.h  profiler_timer.h
software/TALCO-WFAA/tests/: wfa.utest.log.mem
software/TALCO-WFAA/tiling_test/: debug_main.cpp  err_stats.cpp  err_stats.hpp  main.cpp  nanosim_input.cpp  nanosim_input.hpp  tbb_main.cpp
software/TALCO-WFAA/utils/: vector.h
software/TALCO-WFAA/wavefront/: wavefront.c  wavefront.h  wavefront_aligner.c  wavefront_attributes.h  wavefront_backtrace.c  wavefront_compute.c  (+17 more)
software/TALCO-XDrop/: CMakeLists.txt  README.md
software/TALCO-XDrop/src/: TALCO-XDrop.cpp  TALCO-XDrop.hpp  kseq.h  main.cpp  timer.hpp  xact.cpp  xact.hpp
software/scripts/: analysis.sh  build_TALCO.sh  build_baseline.sh  install_dependecies.sh  install_dependencies.sh  run_cpu_baseline.sh  setup_dataset.sh
(+28 files in other folders)
